--- a/file/detail.html
+++ b/file/detail.html
@@ -13,7 +13,7 @@
     <div id="h1">
         <p>欢迎来到<span>Art Store</span></p>
         <p id="headline"><a onclick="showlogin()">登录</a>或<a onclick="showsignin()">注册</a></p>
-        <p class="right"><a href="information.html" id="username-h"><i class="fa fa-user"></i> 未登录</a><a href="shopping.html" id="shopping-h"><i class="fa fa-shopping-cart"></i> 购物车</a><a href="#"><i class="fa fa-sign-out"></i> 登出</a></p>
+        <p class="right"><a href="information.html" id="username-h"><i class="fa fa-user"></i> 未登录</a><a href="shopping.html" id="shopping-h"><i class="fa fa-shopping-cart"></i> 购物车</a><a href="#" id="logout-h"><i class="fa fa-sign-out"></i> 登出</a></p>
     </div>
     <div id="h2">
         <p>Art Store</p>
@@ -26,6 +26,7 @@
         <a href="index.html">首页</a>
         <a href="search-empty.html">搜索</a>
         <a href="detail.html">详情</a>
+        <a href="#">发布艺术品</a>
     </div>
 </header>
 <main>
