--- a/file/index.html
+++ b/file/index.html
@@ -22,26 +22,29 @@
         </nav>
     </header>
         <p>raphael</p>
-        <a href="#" id="learn">Learn More</a>
+        <a href="detail.html" id="learn">Learn More</a>
     <img src="..\images\works\large\095010.jpg" id="img1" class="on" >
     <img src="..\images\works\large\137020.jpg" id="img2" class="off">
 </section>
 <div id="outer">
     <div>
         <img src="..\images\works\square-medium\019050.jpg">
-        <h3>Pablo Picasso</h3>
+        <h3>Spirit of the Dead Watching</h3>
+        <h4>Pablo Picasso</h4>
         <p>Pablo Diego José Francisco de Paula Juan Nepomuceno María de los Remedios Cipriano de la Santísima Trinidad Ruiz y Picasso known as Pablo Ruiz Picasso was a Spanish painter, draughtsman, and sculptor who lived most of his life in France. He is widely known for co-founding the Cubist movement and for the wide variety of styles that he helped develop and explore. </p>
         <a href="detail.html">view details</a>
     </div>
     <div>
         <img src="..\images\works\square-medium\002070.jpg">
-        <h3>Pablo Picasso</h3>
+        <h3>Spirit of the Dead Watching</h3>
+        <h4>Pablo Picasso</h4>
         <p>Pablo Diego José Francisco de Paula Juan Nepomuceno María de los Remedios Cipriano de la Santísima Trinidad Ruiz y Picasso known as Pablo Ruiz Picasso was a Spanish painter, draughtsman, and sculptor who lived most of his life in France. He is widely known for co-founding the Cubist movement and for the wide variety of styles that he helped develop and explore. </p>
         <a href="detail.html">view details</a>
     </div>
     <div>
         <img src="..\images\works\square-medium\001140.jpg">
-        <h3>Pablo Picasso</h3>
+        <h3>Spirit of the Dead Watching</h3>
+        <h4>Pablo Picasso</h4>
         <p>Pablo Diego José Francisco de Paula Juan Nepomuceno María de los Remedios Cipriano de la Santísima Trinidad Ruiz y Picasso known as Pablo Ruiz Picasso was a Spanish painter, draughtsman, and sculptor who lived most of his life in France. He is widely known for co-founding the Cubist movement and for the wide variety of styles that he helped develop and explore. </p>
         <a href="detail.html">view details</a>
     </div>
