--- a/file/information.html
+++ b/file/information.html
@@ -53,7 +53,7 @@
                 <td><span id="remain">1000</span></td>
             </tr>
         </table>
-        <button type="button" name="pay" onclick="incharge()">充值</button>
+        <button type="button" name="pay" id="pay" onclick="incharge()">充值</button>
     </div>
     <div id="content">
         <div id="upload">
@@ -153,6 +153,8 @@
         </table>
         <button type="button" name="register" id="register" onclick="registerbutton()">注册</button>
     </form>
+</div>
+<div id="background">
 </div>
 <script src="login-js.js"></script>
 <script src="information-js.js"></script>
