--- a/file/search-empty.html
+++ b/file/search-empty.html
@@ -101,6 +101,8 @@
         <button type="button" name="register" id="register" onclick="registerbutton()">注册</button>
     </form>
 </div>
+<div id="background">
+</div>
 <script src="login-js.js"></script>
 </body>
 </html>
