--- a/file/shopping.html
+++ b/file/shopping.html
@@ -115,6 +115,8 @@
         <button type="button" name="register" id="register" onclick="registerbutton()">注册</button>
     </form>
 </div>
+<div id="background">
+</div>
 <script src="shopping-js.js"></script>
 <script src="login-js.js"></script>
 </body>
